# OGL_engine

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
r_engine_core/: CMakeLists.txt
r_engine_core/includes/r_engine_core/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp
r_engine_core/src/r_engine_core/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp  Window.hpp
r_engine_core/src/r_engine_core/Modules/: UIModule.cpp  UIModule.hpp
r_engine_core/src/r_engine_core/Rendering/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer_OpenGL.cpp  Renderer_OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
r_engine_editor/: CMakeLists.txt
r_engine_editor/src/: main.cpp
